[package]
name = "cctestgen"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Inflector = "0.11.4"
ariadne = "0.1.3"
clap = "2.33.3"
color-eyre = { version = "0.5.11", default-features = false }
itertools = "0.10.1"
libsecp256k1 = "0.6.0"
once_cell = "1.8.0"
pest = "2.1.3"
pest_derive = "2.1.0"
proc-macro2 = "1.0.28"
quote = "1.0.9"
rand = "0.7"
strum = "0.21.0"
strum_macros = "0.21.1"
syn = "1.0.74"

[profile.dev.package.backtrace]
opt-level = 3
