[package]
name = "cctestgen"
version = "0.3.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[profile.release]
debug = true

[dependencies]
Inflector = "0.11.4"
ariadne = "0.1.3"
clap = "2.33.3"
color-eyre = { version = "0.5.11", default-features = false }
derive-syn-parse = "0.1.5"
derive_more = "0.99.16"
itertools = "0.10.1"
libsecp256k1 = "0.6.0"
once_cell = "1.8.0"
pest = "2.1.3"
pest_derive = "2.1.0"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.28"
quote = "1.0.9"
rand = "0.7"
rand_chacha = "0.2.1"
syn = { version = "1.0.75", features = ["full", "fold", "extra-traits"] }
cctestgen-internal-macros = { version = "0.1", path = "./cctestgen-internal-macros" }
log = "0.4.14"
pretty_env_logger = "0.4.0"

[profile.dev.package.backtrace]
opt-level = 3
