[package]
name = "cctestgen"
version = "0.3.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
Inflector = "0.11.4"
ariadne = "0.1.3"
clap = "2.33.3"
color-eyre = { version = "0.5.11", default-features = false }
derive-syn-parse = "0.1.5"
derive_more = "0.99.16"
itertools = "0.10.1"
libsecp256k1 = "0.7.0"
once_cell = "1.8.0"
proc-macro-error = "1.0.4"
proc-macro2 = { version = "1.0.28", features = ["span-locations"] }
quote = "1.0.9"
rand = "0.8"
rand_chacha = "0.3.1"
syn = { version = "1.0.75", features = [
    "full",
    "fold",
    "extra-traits",
    "visit",
] }
cctestgen-internal-macros = { version = "0.1", path = "../cctestgen-internal-macros" }
log = "0.4.14"
pretty_env_logger = "0.4.0"
